Fixing color contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,12 +94,12 @@ body {
 }
 
 #headerContainer {
-  background: rgba(209, 126, 31, 0.75);
+  background: rgba(160, 80, 10, 0.75);
   background: linear-gradient(
     to bottom,
-    rgb(209, 126, 31) 0%,
-    rgba(190, 105, 20, 0.8) 80%,
-    rgba(234, 140, 16, 0.5) 100%
+    rgb(160, 80, 10) 0%,
+    rgba(130, 60, 5, 0.8) 80%,
+    rgba(190, 100, 20, 0.5) 100%
   );
 
   width: 100%;
@@ -195,7 +195,7 @@ body {
 }
 
 .orange {
-  background-color: #d17e1f;
+  background-color: #8c3c05;
   color: white;
   margin-left: 0;
 }
@@ -217,7 +217,7 @@ body {
 
 .accentBlock a {
   color: #fff;
-  background-color: #d17e1f;
+  background-color: #8c3c05;
   font-size: 1.2em;
   font-weight: bold;
   padding: 10px 20px;
@@ -440,8 +440,8 @@ h2.roza {
     top: 0;
     background: linear-gradient(
       to top,
-      rgba(209, 126, 31, 0.9) 0%,
-      rgba(166, 97, 14, 0.95) 100%
+      rgba(180, 90, 10, 0.9) 0%,
+      rgba(140, 60, 5, 0.95) 100%
     );
     border-right: 1px solid #c67c1a;
     border-bottom: 1px solid #c67c1a;
